Remove overflow to fix sticky. (#34805)

--- a/administrator/templates/atum/scss/blocks/_global.scss
+++ b/administrator/templates/atum/scss/blocks/_global.scss
@@ -122,7 +122,6 @@ caption {
 .container-main,
 .system-debug {
   padding-bottom: 50px;
-  overflow: auto;
 }
 
 body .container-main {
